--- a/www/tab01feature.html
+++ b/www/tab01feature.html
@@ -83,7 +83,7 @@
         
         <div id="btnDog" class="col-sm center-txt"><b onclick="getFotoDog()">Cachorro<br><span class="icon-font">&#128054;</span></b>
         </div>
-        <div id="btnCat" class="col-sm center-txt"><b onclick=''>Gato<br><span class="icon-font"> &#128049;</span></b>
+        <div id="btnCat" class="col-sm center-txt"><b onclick="getFotoCat()">Gato<br><span class="icon-font"> &#128049;</span></b>
         </div>
         <div id="btnFox"class="col-sm center-txt"><b onclick=''>Raposa<br><span class="icon-font">&#129418;</span></b>
         </div>
@@ -94,7 +94,7 @@
 </nav>
 
 <img id="photoDog" src="https:\/\/dog.ceo\/api\/img\/deerhound-scottish\/n02092002_6780.jpg" alt="">
-<img id="photoCat" src="https:\/\/purr.objects-us-east-1.dream.io\/i\/smPafU3.jpg" alt="">
+
 
 <script>
     function getFotoDog()
@@ -119,6 +119,8 @@
          
     }
 </script>
+
+<img id="photoCat" src="https:\/\/purr.objects-us-east-1.dream.io\/i\/screenshot-2017-12-19instagrampostbymotherrussianov6,2014at938amutc4.png" alt="">
 
 <script>
     function getFotoCat()
