--- a/www/tab01feature.html
+++ b/www/tab01feature.html
@@ -7,7 +7,7 @@
     <script src="js/bootstrap.bundle.js"></script>-->
     <title>FTT EC LP2 N1!!</title>
     <LINK REL="stylesheet" HREF="css/bootstrap.css" />
-    <STYLE>
+    <STYLE>   
         .center-txt {
             text-align: center;
             color: black;
@@ -38,15 +38,11 @@
         .icon-font {
             font-size: 40px;   
         }
-        .main {
+        main {
             padding-top: 56px;
             padding-bottom: 50px;
         }
-        .img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
+
     </STYLE>
     <SCRIPT>
 
@@ -76,10 +72,9 @@
 
     <main class="container" id="aluno">
         <hr>
-        <h1><span id="Surpresa" class="badge badge-success">Projeto do aluno!!<br>Features 1</span></h1>
+        <h1><span class="badge badge-success">Projeto do aluno!!<br>Feature 1</span></h1>
         <p><a href="https://github.com/public-apis/public-apis" target="_apis">Lista de APIs públicas</a></p>
     </main>
-
 
 
 <nav class="navbar navbar-light bg-light width-button-bar">
