--- a/www/tab04feature.html
+++ b/www/tab04feature.html
@@ -121,26 +121,13 @@
 
     <nav class="navbar fixed-bottom navbar-light bg-light width-button-bar">
       <div class="row w-100 bottom-button-bar">
-        <div class="col-sm center-txt">
-          <b onclick='window.location="tab01news.html"'
-            >News<br /><span class="icon-font">&#x1f4f0;</span></b
-          >
-        </div>
-        <div class="col-sm center-txt">
-          <b onclick='window.location="tab02map.html"'
-            >Map<br /><span class="icon-font">&#x1f4cc;</span></b
-          >
-        </div>
-        <div class="col-sm center-txt">
-          <b onclick='window.location="tab03todo.html"'
-            >Todo<br /><span class="icon-font">&#x1F4DD;</span></b
-          >
-        </div>
-        <div class="col-sm center-txt button-selected">
-          <b onclick='window.location="tab04project.html"'
-            >???<br /><span class="icon-font">&#x1F981;</span></b
-          >
-        </div>
+          <div class="col-sm center-txt"><b onclick='window.location="tab01feature.html"'>Feature 1<br><span class="icon-font">&#x1f4f0;</span></b>
+          </div>
+          <div class="col-sm center-txt"><b onclick='window.location="tab02feature.html"'>Feature 2<br><span class="icon-font">&#x1f4cc;</span></b>
+          </div>
+          <div class="col-sm center-txt"><b onclick='window.location="tab03feature.html"'>Feature 3<br><span class="icon-font">&#x1F4DD;</span></b>
+          </div>
+          <div class="col-sm center-txt button-selected"><b onclick='window.location="tab04feature.html"'>Feature 4<br><span class="icon-font">&#x1F981;</span></b></div>
       </div>
     </nav>
   </body>
