--- a/www/tab01feature.html
+++ b/www/tab01feature.html
@@ -75,7 +75,7 @@
 
     <main class="container" id="aluno">
         <hr>
-        <h1><span class="badge badge-success">Projeto do aluno!!<br>Feature 1</span></h1>
+        <h1><span class="badge badge-success">Para melhorar o dia<br>com fofura</span></h1>
         <p><a href="https://github.com/public-apis/public-apis" target="_apis">Lista de APIs públicas</a></p>
     </main>
 
