--- a/www/tab01feature.html
+++ b/www/tab01feature.html
@@ -26,7 +26,9 @@
             width: auto;
             height: auto;
         }
-
+        .navbar {
+            z-index: 1;
+        }
         main {
             padding-top: 56px;
             padding-bottom: 50px;
@@ -44,19 +46,19 @@
 
     <div class="margem">
         <p>
-            <img src="img/cat.png" style="position:absolute;float:left;left:40px;bottom:80px;z-index:2;width: 30%;">
+            <img src="img/cat.png" style="position:fixed;bottom: 10%;z-index:2;width: 30%;">
         </p>
     </div>
 
     <div class="margem">
         <p>
-            <img src="img/dog.png" style="position:absolute;float:left;left:40px;bottom:450px;z-index:2;width: 30%;">
+            <img src="img/dog.png" style="position:fixed;top: 0%;z-index:2;width: 30%;">
         </p>
     </div>
 
     <div class="margem">
         <p>
-            <img src="img/fox.png" style="position:absolute;float:right;right:20px;bottom:80px;z-index:2;width: 30%;">
+            <img src="img/fox.png" style="position:fixed;right: 0%;bottom: 10%;z-index:2;width: 30%;">
         </p>
     </div>
 
@@ -68,7 +70,7 @@
 
         <a class="navbar-brand" href="#">&#x1F408; Melhorando o dia com fofura!</a>
         
-        <div class="navbar-nav nav-fill w-100 flex-lg-row ">
+        <div class="navbar-nav nav-fill w-100 navbar width-button-bar">
 
             <button id="btnDog" class="button" onclick="getFotoDog()">Cachorro<span class="icon-font-button">&#128054;</span></button>
             <button id="btnCat" class="button" onclick="getFotoCat()">Gato<span class="icon-font-button"> &#128049;</span></button>
@@ -88,13 +90,12 @@
     <main class="container" id="aluno">
     </main>
 
-
     </nav>
 
 
     <div class="container">
         <p>
-            <center><img id="photo" src="" alt=""></center>
+            <center><img id="photo" src="" alt="" style="z-index:2;width: 30%;"></center>
         </p>
     </div>
 
