--- a/www/tab01feature.html
+++ b/www/tab01feature.html
@@ -26,6 +26,9 @@
             width: auto;
             height: auto;
         }
+        .margem:hover{
+            cursor: pointer;
+        }
         .navbar {
             z-index: 1;
         }
