--- a/www/tab04feature.html
+++ b/www/tab04feature.html
@@ -84,7 +84,7 @@
       </button>
 
       <a class="navbar-brand" id="pais2" href="#"
-        >&#127758; Digite o nome de um país (Em inglês):
+        >&#127758; Digite um país (Em inglês):
       </a>
 
       <input type="text" id="pais" name="pais" /><br /><br />
