--- a/platforms/android/app/src/main/assets/www/tab04feature.html
+++ b/platforms/android/app/src/main/assets/www/tab04feature.html
@@ -84,7 +84,7 @@
       </button>
 
       <a class="navbar-brand" id="pais2" href="#"
-        >&#127758; Digite o nome de um país (Em inglês):
+        >&#127758; Digite um país (Em inglês):
       </a>
 
       <input type="text" id="pais" name="pais" /><br /><br />
@@ -106,6 +106,8 @@
 
     <main class="container" id="aluno">
       <hr />
+      <br>
+      <br>
       <h1>
         <span class="badge badge-warning" id="respostaPais"><!--Texto com a caital do país--></span><br><br>
         <p style="font-size:15px" id="continente"><!--Texto com o continente--></p>
